--- a/css/app.css
+++ b/css/app.css
@@ -64,6 +64,8 @@ body {
 }
 
 .piano {
+	font-size: 0.74vw;	/*responsiveness*/
+
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
@@ -112,7 +114,7 @@ body {
 			transition: 400ms;
 			&.trigger {
 				color: #0f0;
-				box-shadow: 0 0 20px 8px currentColor, inset 0 0 50px 0px currentColor;
+				box-shadow: 0 0 0.6em 0.25em currentColor, inset 0 0 1.6em 0px currentColor;
 				transition: 0ms;
 			}
 
